--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
     "name": "react-ts-template",
     "version": "0.1.0",
     "dependencies": {
+        "@hookform/resolvers": "^2.9.8",
         "@tanstack/react-query": "^4.3.1",
         "@tanstack/react-query-devtools": "^4.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.36.0",
         "react-router-dom": "^6.3.0",
-        "react-scripts": "^5.0.1"
+        "react-scripts": "^5.0.1",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "start": "react-scripts start",
