--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-    "name": "react-ts-template",
+    "name": "my-voca",
     "version": "0.1.0",
     "dependencies": {
         "@hookform/resolvers": "^2.9.8",
-        "@tanstack/react-query": "^4.3.1",
-        "@tanstack/react-query-devtools": "^4.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.36.0",
