--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "react-hook-form": "^7.36.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "^5.0.1",
+        "sweetalert2": "^11.4.33",
         "yup": "^0.32.11"
     },
     "scripts": {
