--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
     "name": "my-voca",
     "version": "0.1.0",
     "dependencies": {
-        "@hookform/resolvers": "^2.9.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.36.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "^5.0.1",
-        "sweetalert2": "^11.4.33",
-        "yup": "^0.32.11"
+        "sweetalert2": "^11.4.33"
     },
     "scripts": {
         "start": "react-scripts start",
