--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
         "eject": "react-scripts eject",
         "prettier": "prettier --write --config ./.prettierrc \"**/*.{ts,tsx}\"",
         "lint": "eslint './src/**/*.{ts,tsx}'",
-        "lint:fix": "eslint --fix './src/**/*.{ts,tsx}'",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "lint:fix": "eslint --fix './src/**/*.{ts,tsx}'"
     },
     "eslintConfig": {
         "extends": [
@@ -57,7 +55,6 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
-        "gh-pages": "^4.0.0",
         "postcss": "^8.4.16",
         "prettier": "^2.5.1",
         "tailwindcss": "^3.1.8",
