--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "license": "MIT",
     "dependencies": {
+        "@craco/craco": "^7.1.0",
         "@heroicons/react": "^2.0.16",
         "@hookform/resolvers": "^3.0.0",
         "react": "^18.2.0",
@@ -15,13 +16,13 @@
         "zustand": "^4.3.6"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
         "eject": "react-scripts eject",
         "prettier": "prettier --write --config ./.prettierrc \"**/*.{ts,tsx}\"",
-        "lint": "eslint './src/**/*.{ts,tsx}'",
-        "lint:fix": "eslint --fix './src/**/*.{ts,tsx}'"
+        "lint": "eslint src",
+        "lint:fix": "eslint --fix src"
     },
     "eslintConfig": {
         "extends": [
@@ -53,6 +54,7 @@
         "eslint": "^7.32.0 || ^8.2.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-typescript": "^3.5.5",
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.2.1",
@@ -60,6 +62,8 @@
         "eslint-plugin-react-hooks": "^4.3.0",
         "postcss": "^8.4.16",
         "prettier": "^2.5.1",
+        "prettier-plugin-tailwindcss": "^0.3.0",
+        "react-app-alias": "^2.2.2",
         "tailwindcss": "^3.1.8",
         "typescript": "^4.8.3"
     }
