--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
     "compilerOptions": {
-        "baseUrl": "src",
         "target": "es2015",
         "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
@@ -17,6 +16,6 @@
         "noEmit": true,
         "jsx": "react-jsx"
     },
-    "include": ["src/*", "src/**/*"],
-    "exclude": ["node_modules"]
+    "include": ["src"],
+    "extends": "./tsconfig.paths.json"
 }
