--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,33 @@
 {
     "compilerOptions": {
-        "target": "es2015",
+        "target": "es5",
         "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
         "skipLibCheck": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
-        "noFallthroughCasesInSwitch": true,
+        "noEmit": true,
+        "esModuleInterop": true,
         "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "preserve",
+        "incremental": true,
+        "plugins": [
+            {
+                "name": "next"
+            }
+        ],
+        "paths": {
+            "@/*": ["./*"],
+            "@app/*": ["./app/*"],
+            "@components/*": ["./components/*"],
+            "@layouts/*": ["./layouts/*"],
+            "@zustand/*": ["./lib/zustand/*"],
+            "@utils/*": ["./utils/*"]
+        }
     },
-    "include": ["src"],
-    "extends": "./tsconfig.paths.json"
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "exclude": ["node_modules"]
 }
