--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
             "@/*": ["./*"],
             "@app/*": ["./app/*"],
             "@components/*": ["./components/*"],
-            "@layouts/*": ["./layouts/*"],
+            "@layout/*": ["./layout/*"],
             "@zustand/*": ["./lib/zustand/*"],
             "@utils/*": ["./utils/*"]
         }
