--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,9 @@
         }
     },
     "rules": {
+        "react-hooks/exhaustive-deps": "off",
+        "react-hooks/rules-of-hooks": "off",
+        "no-param-reassign": "off",
         "import/extensions": "off",
         "react/require-default-props": "off",
         "react/jsx-props-no-spreading": "off",
