--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,11 +24,12 @@
         }
     },
     "rules": {
+        "no-plusplus": "off",
+        "no-param-reassign": "off",
+        "import/extensions": "off",
         "react/no-array-index-key": "off",
         "react-hooks/exhaustive-deps": "off",
         "react-hooks/rules-of-hooks": "off",
-        "no-param-reassign": "off",
-        "import/extensions": "off",
         "react/require-default-props": "off",
         "react/jsx-props-no-spreading": "off",
         "import/prefer-default-export": "off",
