--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "my-voca",
-    "version": "0.1.0",
+    "version": "1.1.0",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -17,7 +17,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.45.1",
-        "typescript": "5.0.4",
+        "uuid": "^9.0.0",
         "yup": "^1.2.0",
         "zustand": "^4.3.8"
     },
@@ -25,6 +25,7 @@
         "@types/node": "20.3.3",
         "@types/react": "18.2.14",
         "@types/react-dom": "18.2.6",
+        "@types/uuid": "^9.0.3",
         "@typescript-eslint/eslint-plugin": "^5.60.1",
         "@typescript-eslint/parser": "^5.60.1",
         "autoprefixer": "10.4.14",
@@ -40,6 +41,7 @@
         "postcss": "8.4.24",
         "prettier": "^2.8.8",
         "prettier-plugin-tailwindcss": "^0.3.0",
-        "tailwindcss": "3.3.2"
+        "tailwindcss": "3.3.2",
+        "typescript": "5.0.4"
     }
 }
