--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
         "plugin:@typescript-eslint/recommended",
         "prettier",
         "plugin:prettier/recommended",
-        "plugin:react/jsx-runtime"
+        "plugin:react/jsx-runtime",
+        "plugin:@tanstack/eslint-plugin-query/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
