--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
         "@emotion/styled": "^11.11.0",
         "@heroicons/react": "^2.0.18",
         "@hookform/resolvers": "^3.3.1",
+        "@tanstack/react-query": "^5.8.6",
+        "@tanstack/react-query-devtools": "^5.8.6",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
+        "axios": "^1.6.2",
+        "dayjs": "^1.11.10",
+        "msw": "^2.0.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.46.2",
@@ -22,6 +27,7 @@
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@tanstack/eslint-plugin-query": "^5.8.4",
         "@types/jest": "^27.0.1",
         "@types/node": "^16.7.13",
         "@types/react": "^18.0.0",
@@ -74,5 +80,8 @@
         "twin": {
             "preset": "emotion"
         }
+    },
+    "msw": {
+        "workerDirectory": "public"
     }
 }
