--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
         "prettier/prettier": "off",
         "no-shadow": "off",
         "no-plusplus": "off",
+        "no-nested-ternary": "off",
         "no-param-reassign": "off",
         "import/extensions": "off",
         "consistent-return": "off",
