--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,8 +11,7 @@
         "plugin:@typescript-eslint/recommended",
         "prettier",
         "plugin:prettier/recommended",
-        "plugin:react/jsx-runtime",
-        "plugin:@tanstack/eslint-plugin-query/recommended"
+        "plugin:react/jsx-runtime"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -63,7 +62,7 @@
                         "position": "before"
                     },
                     {
-                        "pattern": "{hooks/**,hooks*,mocks/**,lib/zustand/**,lib/api/**,utils/**,}",
+                        "pattern": "{hooks/**,hooks*,dummy/**,lib/zustand/**,utils/**,}",
                         "patternOptions": {
                             "dot": true,
                             "nocomment": true,
