--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "my-voca",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "private": true,
+    "homepage": "https://akffkdahffkdgo77.github.io/my-voca/",
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
@@ -49,6 +50,7 @@
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-plugin-storybook": "^0.6.15",
+        "gh-pages": "^6.1.1",
         "prettier": "^3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.4",
         "prop-types": "^15.8.1",
@@ -66,7 +68,9 @@
         "lint": "eslint \"**/*.{ts,tsx}\"",
         "lint:fix": "eslint --fix \"**/*.{ts,tsx}\"",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "build-storybook": "storybook build",
+        "predeploy": "yarn run build",
+        "deploy": "gh-pages -d dist"
     },
     "eslintConfig": {
         "extends": [
