--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
         "predeploy": "yarn run build",
-        "deploy": "gh-pages -d dist"
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
